0.1.0
    o loadDataADaMSDTM: ... parameters for read_sas
0.0.6
    o getGLPGColorPalette: fix names color palette when no x is specified
0.0.5
    o getLabelVar: fix when labelVars specified but variable not in labelVars
    o knitPrintListObjects function
    o simpleCap can deal with NA
0.0.4
    o getGLPGLinetypePalette: remove blank linetype
0.0.3
    o simpleCap function
    o getPatientColorPalette -> getGLPGColorPalette, getPatientShapePalette -> getGLPGShapePalette
    o getGLPGLinetypePalette
0.0.2
    o add convertVarToFactor function
0.0.1
    o initial version